# burn_resnet

./: .gitignore  Cargo.toml  FINETUNE_README.md  FREEZE_INFO.md  README.md  cifar10_finetuning_pretrained.csv  cifar10_finetuning_scratch.csv
src/: cifar10.rs  convert_cifar10.rs  dataset.rs  finetune.rs  main.rs  model.rs  test_eval.rs
