[package]
name = "burn_resnet"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.16", features = ["train", "wgpu", "dataset"] }
burn-wgpu = "0.16"
image = "0.25"
walkdir = "2.5"
rand = "0.8"

[[bin]]
name = "train"
path = "src/main.rs"

[[bin]]
name = "finetune"
path = "src/finetune.rs"

[[bin]]
name = "convert_cifar10"
path = "src/convert_cifar10.rs"
